--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "graphql",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "description": "Curso - GraphQL: Criando APIs Profissionais e Flexíveis",
+  "main": "index.ts",
   "keywords": [],
-  "author": "",
+  "author": "Pedro Mesquita",
   "license": "ISC",
-  "type": "module",
+  "scripts": {
+    "compile": "tsc",
+    "start": "yarn run compile && node ./dist/index.js",
+    "start:dev": "nodemon src/index.ts"
+  },
   "dependencies": {
     "@apollo/server": "^4.10.0",
     "graphql": "^16.8.1"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
-    "@types/node": "^20.11.20"
+    "@types/node": "^20.11.20",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
