--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "graphql",
   "version": "1.0.0",
   "description": "Curso - GraphQL: Criando APIs Profissionais e Flexíveis",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "keywords": [],
   "author": "Pedro Mesquita",
   "license": "ISC",
   "scripts": {
     "compile": "tsc",
-    "start": "yarn run compile && node ./dist/index.js",
-    "start:dev": "nodemon src/index.ts"
+    "start": "nodemon src/index.ts"
   },
   "dependencies": {
     "@apollo/server": "^4.10.0",
