--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": [
       "ES2020"
     ], /* Specify a set of bundled library declaration files that describe the target runtime environment. */
-    "module": "ESNext", /* Specify what module code is generated. */
+    "module": "CommonJS", /* Specify what module code is generated. */
     "moduleResolution": "Node", /* Specify how TypeScript looks up a file from a given module specifier. */
     "rootDirs": [
       "src"
